# atma-palette-rs

./: .atma-config  .atma-settings  .gitignore  .trace  Cargo.toml  change_log.md  notes.md  readme.md  test.atma  test.sh
src/: basic.rs  bimap.rs  cell.rs  command.rs  config.rs  dispatch.rs  error.rs  expr.rs  history.rs  lib.rs  logger.rs  operation.rs  palette.rs  parse.rs  parser_base.rs  selection.rs  setup.rs  test.rs  tests.rs  utility.rs
src/cell/: position.rs  reference.rs  selection.rs  selector.rs
src/command/: ancillary.rs  dispatch.rs  export_png.rs  list.rs  new.rs  option.rs  script.rs
src/palette/: application.rs  basic.rs  expr.rs  full.rs  history.rs  operation.rs
src/parse/: ast.rs  ast_helper.rs  ast_match.rs  color.rs  combinator.rs  common.rs  error.rs  expr.rs  function.rs  primitive.rs  result.rs  scanner.rs  script.rs  selection.rs  tests.rs
src/parse_old/: color.rs  combinator.rs  expr.rs  selection.rs
src/setup/: config.rs  load_status.rs  logger.rs  settings.rs  trace.rs
src/test/: cell_suite.rs  color_suite.rs  expr_suite.rs  operation_suite.rs  parse_suite.rs  primitive_suite.rs  selection_suite.rs
