[package]
name = "atma"
version = "0.0.83"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2018"
license = "MIT or Apache-2.0"
# maintenance = { status = "experiemental" }
repository = "https://github.com/skysch/atma-rs"
description = "Atma structured color palette library & CLI interface"
readme = "readme.md"
keywords = ["color", "palette"]
categories = []
documentation = ""
homepage = ""
exclude = ["*.sublime-project", "*.sublime-workspace"]

[lib]
name = "atma"

[features]
default = []

# Required dependencies
[dependencies]
anyhow = "1.0"
color = { git = "https://github.com/skysch/color-rs", features = ["serde"] }
colored = "1.9"
fern = { version = "*", features = ["colored"] }
few = { version = "0.1" }
log = { version = "*", features = ["serde"] }
ron = "*"
rustc_version_runtime = "*"
serde = { version = "*", features = ["derive"] }
structopt = { version = "0.3", features = ["suggestions", "color"] }
bimap = { version = "0.4", features = [ "serde" ]}


# Dependencies used for tests, examples, and benches.
[dev-dependencies]


# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = false # Disabled to speed up compilation; not being used much.
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true

# Development profile overrides, ensure dependent crates run fast.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
codegen-units = 1


# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true


