[package]
name = "atma"
version = "0.0.231"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
# maintenance = { status = "experiemental" }
repository = "https://github.com/skysch/atma-rs"
description = "Atma structured color palette library & CLI interface"
readme = "readme.md"
keywords = ["color", "palette"]
categories = []
documentation = ""
homepage = ""
exclude = [
	"*.sublime-project",
	"*.sublime-workspace",
	".atma-config",
	".atma-settings",
	".atma-script",
	"*.atma-palette"]

[lib]
name = "atma"

[features]
default = ["png", "termsize"]

# Required dependencies
[dependencies]
anyhow = "1.0"
color = { git = "https://github.com/skysch/color-rs", features = ["serde"] }
tephra = { git = "https://github.com/skysch/tephra-rs" }
colored = { version = "2.0" }
fern = { version = "*", features = ["colored"] }
few = { version = "0.1.4" }
normalize_interval = { version = "0.14" }
tracing = { version = "0.1" }
tracing-subscriber = "0.2.15"
tracing-appender = "0.1.1"
ron = "*"
rustc_version_runtime = "*"
serde = { version = "*", features = ["derive"] }
structopt = { version = "0.3", features = ["suggestions", "color"] }
png = { version = "0.16", optional = true}
termsize = { version = "0.1", optional = true}
# Dependencies used for tests, examples, and benches.
[dev-dependencies]


# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = false # Disabled to speed up compilation; not being used much.
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true

# Development profile overrides, ensure dependent crates run fast.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
codegen-units = 1


# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true


